--- a/index.html
+++ b/index.html
@@ -190,6 +190,19 @@ body{
 @media (max-width:520px){
   .tab{flex:1 1 calc(50% - 8px); text-align:center}
 }
+/* ... твоят съществуващ CSS ... */
+
+  /* MOBILE FIX - най-долу */
+.row.cats {
+  padding: 8px 0 !important;
+  gap: 6px !important;
+}
+
+.chip {
+  padding: 8px 12px !important;
+  font-size: 13px !important;
+  line-height: 1 !important;
+} 
 
 /* --- waiter overlay scroll fix (only) --- */
 .modal{display:flex;flex-direction:column;max-height:86vh;}
