--- a/index.html
+++ b/index.html
@@ -254,7 +254,44 @@ body{
   }
 }
 
-/* Mobile: Horizontal scroll с градиент */
+/* ============================================
+   FINAL: Компактни бутони - само текст
+   ============================================ */
+
+.tabs {
+  margin: 6px 0 10px !important;
+  gap: 4px !important;  /* много малко разстояние */
+  position: relative !important;
+}
+
+.tab {
+  padding: 6px 10px !important;  /* минимален padding */
+  font-size: 13px !important;
+  line-height: 1.2 !important;
+  min-height: unset !important;
+  height: auto !important;
+  text-align: center !important;
+  white-space: nowrap !important;
+  border-radius: 6px !important;  /* по-малък border radius */
+}
+
+/* Desktop: Multi-column, 2 реда */
+@media (min-width: 521px) {
+  .tabs {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    max-height: 64px !important;  /* ~32px × 2 реда */
+    overflow: hidden !important;
+    align-content: flex-start !important;
+  }
+  
+  .tab {
+    flex: 0 0 auto !important;
+    padding: 5px 8px !important;  /* още по-малък на desktop */
+  }
+}
+
+/* Mobile: Horizontal scroll */
 @media (max-width: 520px) {
   .tabs {
     display: flex !important;
@@ -272,10 +309,10 @@ body{
   
   .tab {
     flex-shrink: 0 !important;
-    padding: 9px 16px !important;
+    padding: 6px 10px !important;
   }
   
-  /* Fade градиент - индикация за още категории */
+  /* Fade градиент вдясно */
   .tabs::after {
     content: '' !important;
     position: absolute !important;
@@ -287,7 +324,7 @@ body{
     pointer-events: none !important;
     z-index: 10 !important;
   }
-} 
+}
 
 /* --- waiter overlay scroll fix (only) --- */
 .modal{display:flex;flex-direction:column;max-height:86vh;}
