--- a/index.html
+++ b/index.html
@@ -291,7 +291,47 @@ body{
   }
 }
 
-/* Mobile: Horizontal scroll */
+Разбирам! На телефона бутоните остават широки въпреки промените. Проблемът е, че в horizontal scroll режим не променихме padding-а достатъчно.
+
+✅ Решение: По-малки бутони на mobile
+css/* ============================================
+   FINAL: Компактни бутони desktop И mobile
+   ============================================ */
+
+.tabs {
+  margin: 6px 0 10px !important;
+  gap: 4px !important;
+  position: relative !important;
+}
+
+.tab {
+  padding: 6px 10px !important;
+  font-size: 13px !important;
+  line-height: 1.2 !important;
+  min-height: unset !important;
+  height: auto !important;
+  text-align: center !important;
+  white-space: nowrap !important;
+  border-radius: 6px !important;
+}
+
+/* Desktop: Multi-column, 2 реда */
+@media (min-width: 521px) {
+  .tabs {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    max-height: 64px !important;
+    overflow: hidden !important;
+    align-content: flex-start !important;
+  }
+  
+  .tab {
+    flex: 0 0 auto !important;
+    padding: 5px 8px !important;
+  }
+}
+
+/* Mobile: Horizontal scroll с по-малки бутони */
 @media (max-width: 520px) {
   .tabs {
     display: flex !important;
@@ -301,6 +341,7 @@ body{
     -webkit-overflow-scrolling: touch !important;
     scrollbar-width: none !important;
     padding-bottom: 4px !important;
+    gap: 3px !important;  /* още по-малко разстояние */
   }
   
   .tabs::-webkit-scrollbar {
@@ -309,7 +350,9 @@ body{
   
   .tab {
     flex-shrink: 0 !important;
-    padding: 6px 10px !important;
+    padding: 6px 10px !important;  /* ← компактен padding */
+    font-size: 12px !important;    /* ← по-малък шрифт */
+    border-radius: 5px !important;
   }
   
   /* Fade градиент вдясно */
