--- a/index.html
+++ b/index.html
@@ -371,45 +371,64 @@ css/* ============================================
   }
 }
 
-/* Mobile: Horizontal scroll - auto width */
-@media (max-width: 520px) {
+/* ============================================
+   FINAL: 2 реда desktop, 3 реда mobile (без scroll)
+   ============================================ */
+
+.tabs {
+  margin: 6px 0 10px !important;
+  gap: 4px !important;
+  position: relative !important;
+}
+
+.tab {
+  padding: 6px 10px !important;
+  font-size: 13px !important;
+  line-height: 1.2 !important;
+  min-height: unset !important;
+  height: auto !important;
+  text-align: center !important;
+  white-space: nowrap !important;
+  border-radius: 6px !important;
+}
+
+/* Desktop: Multi-column, 2 реда */
+@media (min-width: 521px) {
   .tabs {
     display: flex !important;
-    flex-wrap: nowrap !important;
-    overflow-x: auto !important;
-    overflow-y: hidden !important;
-    -webkit-overflow-scrolling: touch !important;
-    scrollbar-width: none !important;
-    padding-bottom: 4px !important;
-    gap: 3px !important;
-  }
-  
-  .tabs::-webkit-scrollbar {
-    display: none !important;
+    flex-wrap: wrap !important;
+    max-height: 64px !important;
+    overflow: hidden !important;
+    align-content: flex-start !important;
   }
   
   .tab {
-    flex: 0 0 auto !important;     /* ← НЕ expand */
-    flex-shrink: 0 !important;
+    flex: 0 0 auto !important;
+    padding: 5px 8px !important;
+    width: auto !important;
+    min-width: auto !important;
+    max-width: none !important;
+  }
+}
+
+/* Mobile: 3 реда, flex wrap */
+@media (max-width: 520px) {
+  .tabs {
+    display: flex !important;
+    flex-wrap: wrap !important;        /* ← wrap вместо nowrap */
+    overflow: visible !important;      /* ← visible вместо scroll */
+    gap: 3px !important;
+    max-height: 96px !important;       /* ~32px × 3 реда */
+  }
+  
+  .tab {
+    flex: 0 0 auto !important;
     padding: 6px 10px !important;
     font-size: 12px !important;
     border-radius: 5px !important;
-    width: auto !important;        /* ← форсира auto width */
-    min-width: auto !important;    /* ← премахва min-width */
-    max-width: none !important;    /* ← премахва max-width */
-  }
-  
-  /* Fade градиент вдясно */
-  .tabs::after {
-    content: '' !important;
-    position: absolute !important;
-    right: 0 !important;
-    top: 0 !important;
-    bottom: 4px !important;
-    width: 50px !important;
-    background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.9) 50%, white) !important;
-    pointer-events: none !important;
-    z-index: 10 !important;
+    width: auto !important;
+    min-width: auto !important;
+    max-width: none !important;
   }
 }
 
