--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Чичовци – QR меню</title>
+<title>Чичовци — QR меню</title>
 <style>
 :root{
   --text:#0f172a;
@@ -189,215 +189,14 @@ body{
 }
 @media (max-width:520px){
   .tab{flex:1 1 calc(50% - 8px); text-align:center}
-} 
-
-/* ============================================
-   MOBILE FIX: Horizontal scroll на телефон, 3 колони на desktop
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
-  gap: 6px !important;
-}
-
-.tab {
-  padding: 10px 14px !important;
-  font-size: 13px !important;
-  line-height: 1.15 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;  /* текстът НЕ се пренася на нов ред */
-}
-
-/* Desktop: 3 колони grid */
-@media (min-width: 521px) {
-  .tabs {
-    display: grid !important;
-    grid-template-columns: repeat(3, 1fr) !important;
-  }
 }
 
 /* ============================================
-   FINAL: 2 реда desktop, horizontal scroll mobile
+   FINAL: 4 реда mobile с визуално разделяне, 2 реда desktop
    ============================================ */
 
 .tabs {
-  margin: 6px 0 10px !important;
-  gap: 6px !important;
-  position: relative !important;
-}
-
-.tab {
-  padding: 10px 14px !important;
-  font-size: 13px !important;
-  line-height: 1.15 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;
-}
-
-/* Desktop: Multi-column layout - 2 реда */
-@media (min-width: 521px) {
-  .tabs {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    max-height: 88px !important;  /* ограничава до 2 реда (~44px × 2) */
-    overflow: hidden !important;
-    align-content: flex-start !important;
-  }
-  
-  .tab {
-    flex: 0 0 auto !important;  /* автоматична ширина според текста */
-    min-width: fit-content !important;
-  }
-}
-
-/* ============================================
-   FINAL: Компактни бутони - само текст
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
-  gap: 4px !important;  /* много малко разстояние */
-  position: relative !important;
-}
-
-.tab {
-  padding: 6px 10px !important;  /* минимален padding */
-  font-size: 13px !important;
-  line-height: 1.2 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;
-  border-radius: 6px !important;  /* по-малък border radius */
-}
-
-/* Desktop: Multi-column, 2 реда */
-@media (min-width: 521px) {
-  .tabs {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    max-height: 64px !important;  /* ~32px × 2 реда */
-    overflow: hidden !important;
-    align-content: flex-start !important;
-  }
-  
-  .tab {
-    flex: 0 0 auto !important;
-    padding: 5px 8px !important;  /* още по-малък на desktop */
-  }
-}
-
-Разбирам! На телефона бутоните остават широки въпреки промените. Проблемът е, че в horizontal scroll режим не променихме padding-а достатъчно.
-
-✅ Решение: По-малки бутони на mobile
-css/* ============================================
-   FINAL: Компактни бутони desktop И mobile
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
-  gap: 4px !important;
-  position: relative !important;
-}
-
-.tab {
-  padding: 6px 10px !important;
-  font-size: 13px !important;
-  line-height: 1.2 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;
-  border-radius: 6px !important;
-}
-
-/* Desktop: Multi-column, 2 реда */
-@media (min-width: 521px) {
-  .tabs {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    max-height: 64px !important;
-    overflow: hidden !important;
-    align-content: flex-start !important;
-  }
-  
-  .tab {
-    flex: 0 0 auto !important;
-    padding: 5px 8px !important;
-  }
-}
-
-/* ============================================
-   FINAL: Auto-width бутони на mobile
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
-  gap: 4px !important;
-  position: relative !important;
-}
-
-.tab {
-  padding: 6px 10px !important;
-  font-size: 13px !important;
-  line-height: 1.2 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;
-  border-radius: 6px !important;
-}
-
-/* Desktop: Multi-column, 2 реда */
-@media (min-width: 521px) {
-  .tabs {
-    display: flex !important;
-    flex-wrap: wrap !important;
-    max-height: 64px !important;
-    overflow: hidden !important;
-    align-content: flex-start !important;
-  }
-  
-  .tab {
-    flex: 0 0 auto !important;  /* auto-width */
-    padding: 5px 8px !important;
-    width: auto !important;     /* ← форсира auto width */
-    min-width: auto !important;
-    max-width: none !important;
-  }
-}
-
-/* ============================================
-   FINAL: 2 реда desktop, 3 реда mobile (без scroll)
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
-  gap: 4px !important;
-  position: relative !important;
-}
-
-.tab {
-  padding: 6px 10px !important;
-  font-size: 13px !important;
-  line-height: 1.2 !important;
-  min-height: unset !important;
-  height: auto !important;
-  text-align: center !important;
-  white-space: nowrap !important;
-  border-radius: 6px !important;
-}
-
-/* ============================================
-   FINAL: 2 реда desktop, 3 реда mobile - компактни бутони
-   ============================================ */
-
-.tabs {
-  margin: 6px 0 10px !important;
+  margin: 6px 0 16px !important;
   gap: 4px !important;
   position: relative !important;
 }
@@ -432,32 +231,42 @@ css/* ============================================
   }
 }
 
-/* Mobile: 3 реда, много компактни бутони */
+/* Mobile: 4 реда с визуално разделяне */
 @media (max-width: 520px) {
   .tabs {
     display: flex !important;
     flex-wrap: wrap !important;
     overflow: visible !important;
     gap: 3px !important;
-    max-height: 90px !important;  /* ~30px × 3 реда */
+    max-height: 120px !important;
+    background: #f9fafb !important;
+    padding: 6px !important;
+    border-radius: 8px !important;
+    margin-bottom: 16px !important;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.05) !important;
   }
   
   .tab {
     flex: 0 0 auto !important;
-    padding: 5px 8px !important;   /* ← по-малък padding */
-    font-size: 11px !important;    /* ← по-малък шрифт */
+    padding: 5px 8px !important;
+    font-size: 11px !important;
     line-height: 1.2 !important;
     border-radius: 4px !important;
     width: auto !important;
     min-width: auto !important;
     max-width: none !important;
-    font-weight: 650 !important;   /* леко по-bold за четимост */
+    font-weight: 650 !important;
+    background: #ffffff !important;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.04) !important;
+  }
+  
+  .tab.active {
+    background: var(--chip) !important;
+    color: var(--chipText) !important;
+    border-color: var(--chip) !important;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1) !important;
   }
 }
-
-/* --- waiter overlay scroll fix (only) --- */
-.modal{display:flex;flex-direction:column;max-height:86vh;}
-.modbody{overflow-y:auto;-webkit-overflow-scrolling:touch;}
 
 </style>
 </head>
@@ -491,8 +300,8 @@ css/* ============================================
 <script>
 const data = window.MENU_BG;
 let activeCat = data.categories[0]?.id || "";
-let lang = "bg"; // later: en/de/es/it/tr/ru/gr
-const order = new Map(); // code -> qty
+let lang = "bg";
+const order = new Map();
 
 function getActiveCategory(){
   return data.categories.find(c => c.id === activeCat) || data.categories[0];
@@ -584,7 +393,6 @@ function renderOrder(){
     return;
   }
 
-  // build lookup by code
   const byCode = new Map();
   data.categories.forEach(c => c.items.forEach(i => byCode.set(i.code, i)));
 
@@ -600,7 +408,6 @@ function renderOrder(){
 
     const name = document.createElement("div");
     name.className = "rowname";
-    // For now: BG only. Later: show client language + Bulgarian line under it
     name.textContent = `${it.code} · ${it.name} ×${qty}`;
 
     const ctrl = document.createElement("div");
@@ -649,7 +456,6 @@ document.getElementById("overlay").onclick = (e) => {
   if(e.target.id==="overlay") document.getElementById("overlay").style.display = "none";
 };
 
-// language buttons (EN is placeholder for now)
 document.getElementById("lang-bg").onclick = () => { lang="bg"; alert("Език: Български"); };
 document.getElementById("lang-en").onclick = () => { alert("EN ще добавим след като заключим BG."); };
 
