--- a/index.html
+++ b/index.html
@@ -358,6 +358,16 @@ body{
   font-weight: 800 !important;
   padding: 0 6px !important;
 }
+.modal {
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.modbody {
+  overflow-y: auto;
+  max-height: calc(90vh - 56px);
+}
 
 </style>
 </head>
