--- a/index-view.html
+++ b/index-view.html
@@ -234,7 +234,7 @@ function renderList(){
 
     const topline = document.createElement("div");
     topline.className = "waiter";
-    topline.innerHTML = `<span class="code">${it.code}</span><span class="title">${it.name}</span>`;
+    topline.innerHTML = `<span class="title">${it.name}</span>`;
     wrap.appendChild(topline);
 
     if(it.desc){
