--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@ body{
   line-height:1.12;
 }
 .code{font-weight:800;font-size:12px;color:var(--muted)}
-.title{font-weight:700; font-size:15px}
+.title {
+  font-weight: 700;
+  font-size: 16px;         /* +1px */
+  color: #0f172a;          /* по-тъмно */
+  letter-spacing: -0.01em;
+}
 .desc{
   color:var(--text);
   font-size:13px;
@@ -581,4 +586,5 @@ render();
 </body>
 
 </html>
+
 
