--- a/index-view.html
+++ b/index-view.html
@@ -37,6 +37,9 @@ body{
 .flagbtn{width:44px;height:30px;border:1px solid var(--chipBorder);border-radius:10px;background-size:cover;background-position:center;background-repeat:no-repeat;padding:0;cursor:pointer}
 .flagbg{background-image:url('data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%203%202%27%3E%0A%3Crect%20width%3D%273%27%20height%3D%272%27%20fill%3D%27%23ffffff%27/%3E%0A%3Crect%20width%3D%273%27%20height%3D%271.3333%27%20y%3D%270.6667%27%20fill%3D%27%2300966E%27/%3E%0A%3Crect%20width%3D%273%27%20height%3D%270.6667%27%20y%3D%271.3333%27%20fill%3D%27%23D62612%27/%3E%0A%3C/svg%3E');}
 .flagen{background-image:url('data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%2060%2030%27%3E%0A%3Cpath%20d%3D%27M0%2C0%20v30%20h60%20v-30%20z%27%20fill%3D%27%23012169%27/%3E%0A%3Cpath%20d%3D%27M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%27%20stroke%3D%27%23ffffff%27%20stroke-width%3D%276%27/%3E%0A%3Cpath%20d%3D%27M0%2C0%20L60%2C30%20M60%2C0%20L0%2C30%27%20stroke%3D%27%23C8102E%27%20stroke-width%3D%274%27/%3E%0A%3Cpath%20d%3D%27M30%2C0%20v30%20M0%2C15%20h60%27%20stroke%3D%27%23ffffff%27%20stroke-width%3D%2710%27/%3E%0A%3Cpath%20d%3D%27M30%2C0%20v30%20M0%2C15%20h60%27%20stroke%3D%27%23C8102E%27%20stroke-width%3D%276%27/%3E%0A%3C/svg%3E');}
+.flagit{background-image:url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3 2"%3E%3Crect width="1" height="2" x="0" fill="%23009246"/%3E%3Crect width="1" height="2" x="1" fill="%23ffffff"/%3E%3Crect width="1" height="2" x="2" fill="%23ce2b37"/%3E%3C/svg%3E');
+} 
+
 .flagemoji{display:none}
 .flagtxt{display:none}
 .tabs{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0 12px;overflow:visible}
@@ -141,7 +144,7 @@ body{
 
   .tab {
     flex: 0 0 auto !important;
-    padding: 5px 8px !important;
+    padding: 4px 6px !important;
     width: auto !important;
     min-width: auto !important;
     max-width: none !important;
@@ -190,6 +193,7 @@ body{
     <div class="flags">
       <button class="flagbtn flagbg" id="lang-bg" title="Български" aria-label="Български"></button>
       <button class="flagbtn flagen" id="lang-en" title="English (coming soon)" aria-label="English"></button>
+	  <button class="flagbtn flagit" id="lang-it" title="Italiano" aria-label="Italiano"></button>
     </div>
   </div>
 
@@ -199,6 +203,7 @@ body{
 
 <script src="data-bg.js"></script>
 <script src="data-en.js"></script>
+<script src="data-it.js"></script>
 <script>
 let currentLang = "bg";
 let data = window.MENU_BG;
@@ -207,7 +212,11 @@ let activeCat = data.categories[0]?.id || "";
 /* VIEW-ONLY: няма избор, няма поръчка */
 function switchLanguage(lang) {
   currentLang = lang;
-  data = lang === "bg" ? window.MENU_BG : window.MENU_EN;
+  data =
+    lang === "bg" ? window.MENU_BG :
+    lang === "en" ? window.MENU_EN :
+    window.MENU_IT;
+
   activeCat = data.categories[0]?.id || "";
   render();
 }
@@ -272,6 +281,7 @@ function render(){
 
 document.getElementById("lang-bg").onclick = () => { switchLanguage("bg"); };
 document.getElementById("lang-en").onclick = () => { switchLanguage("en"); };
+document.getElementById("lang-it").onclick = () => switchLanguage("it");
 
 render();
 </script>
