--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body{
     gap: 3px !important;
     max-height: 120px !important;
     background: #f9fafb !important;
-    padding: 4px 6px !important;
+    padding: px2 5px !important;
     border-radius: 8px !important;
     margin-bottom: 16px !important;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05) !important;
@@ -579,3 +579,4 @@ render();
 </script>
 </body>
 </html>
+
