--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body{
     gap: 3px !important;
     max-height: 120px !important;
     background: #f9fafb !important;
-    padding: 1px 2px !important;
+    padding: 6px !important;
     border-radius: 8px !important;
     margin-bottom: 16px !important;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05) !important;
@@ -270,7 +270,7 @@ body{
 
   .tab {
     flex: 0 0 auto !important;
-    padding: 5px 8px !important;
+    padding: 2px 5px !important;
     font-size: 11px !important;
     line-height: 1.2 !important;
     border-radius: 4px !important;
@@ -579,6 +579,7 @@ render();
 </script>
 </body>
 </html>
+
 
 
 
