--- a/index-view.html
+++ b/index-view.html
@@ -160,7 +160,7 @@ body{
     gap: 3px !important;
     max-height: 120px !important;
     background: #f9fafb !important;
-    padding: 4px 7px !important;
+    padding: 6px !important;
     border-radius: 8px !important;
     margin-bottom: 16px !important;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05) !important;
@@ -168,7 +168,7 @@ body{
 
   .tab {
     flex: 0 0 auto !important;
-    padding: 1px 3px !important;
+    padding: 3px 5px !important;
     font-size: 11px !important;
     line-height: 1.2 !important;
     border-radius: 4px !important;
